Fri Sep 29 17:17:50 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - drivers/rhino.c: fixed array bounds error, cleanup (made global
   variables static, removed unused variables, removed header file).

Wed Sep 27 23:50:15 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - path-to-subdriver.sh: added command line options

Wed Sep 27 00:36:09 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: Updated SMARTPRO support based on Jeff Knerr's feedback.
   This should fix the OL/OB issue, and maybe even the temperature reading.

Tue Sep 26 21:22:27 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - driver.list: added Tripp-Lite OMNI650LCD and OMNI900LCD

Sun Sep 24 03:38:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - merged report buffer branch into trunk. See log message for 
   revision r274, Thu Nov 24 03:36:14 UTC 2005.

Sun Sep 24 01:49:40 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - path-to-subdriver.sh: added reminder to "make depend"
 - newhidups subdrivers: added #include "main.h" to keep compiler quiet.
 - libusb.c: made all private functions static
 - tripplite_usb.c: use new comm_driver interface to libhid.c

Sat Sep 23 18:23:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added a shell script scripts/subdriver/path-to-subdriver.sh
   to automatically create a "stub" subdriver from the debugging info
   of "drivers/newhidups -DD -u root -x generic -x vendorid=XXXX auto"

Sat Sep 23 01:39:22 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups.c: fixed array size in upsdrv_initups (potential stack
   corruption). Thanks to Herve Masson for reporting this bug.

Mon Sep 18 23:48:57 EDT 2006 / Charles Lepple <clepple@gmail.com>

 - tripplite_usb: added some more variables for SMARTPRO UPSes, some more
   debugging output, and some variable type cleanup. Driver internal version
   is now 0.7.